syntax = "proto3";

package eigenlayer.hourglass.v1;

import "eigenlayer/common/v1/types.proto";

option go_package = "github.com/Layr-Labs/hourglass-monorepo/ponos/gen/protos/eigenlayer/hourglass/v1";

service ExecutorService {
  rpc SubmitTask(TaskSubmission) returns (eigenlayer.common.v1.SubmitAck) {}
}

message TaskSubmission {
  string task_id = 1;
  string aggregator_address = 2;
  string avs_address = 3;
  bytes payload = 4;

  bytes signature = 5;
  string aggregator_url = 6;
}

